Basic job processing with net framework concurrency

--- a/NetConcurrency/NetConcurrency.csproj
+++ b/NetConcurrency/NetConcurrency.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\JobQueue\JobQueue.csproj">
+      <Project>{0bdce815-4bbe-4cd3-b521-40a4e1f360cb}</Project>
+      <Name>JobQueue</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
